<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".diary.DiaryDayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/caloriesInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calories left"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caloriesRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caloriesInfoLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/breakfastLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner_alice_blue">

                <TextView
                    android:id="@+id/breakfastLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/breakfast"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/breakfastCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/zero"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/breakfastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/addFoodToBreakfastTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:text="+"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lunchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner_alice_blue">

                <TextView
                    android:id="@+id/lunchLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/lunch"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lunchCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/zero"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lunchRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToLunchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:text="+"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner_alice_blue">

                <TextView
                    android:id="@+id/dinnerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/dinner"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dinnerCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/zero"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dinnerRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToDinnerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:text="+"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/snacksLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner_alice_blue">

                <TextView
                    android:id="@+id/snacksLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/snacks"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/snacksCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/zero"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/snacksRecyclerView"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToSnacksTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:text="+"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exerciseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner_alice_blue">

                <TextView
                    android:id="@+id/exerciseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:text="@string/exercise"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exerciseRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addExerciseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:text="+"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>