...
    <string name="minus_sign">-</string>
    <string name="equal_sign">=</string>
    <string name="goal">Goal</string>
    <string name="food">Food</string>
    <string name="remaining">Remaining</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_food">+ Add Food</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
...
    <string name="enter_weight">Enter weight</string>
    <string name="change_date">Change date</string>
    <string name="enter_calories">Enter calories</string>
    <string name="add_food_info">Add food info</string>
    <string name="scan">Scan</string>
    <string name="exercise_delete">Exercise delete</string>
    <string name="food_delete">Food delete</string>
    <string name="food_info">Food info</string>
    <string name="add_goals">Add goals</string>
    <string name="calories_delete">Calories delete</string>
    <string name="calories_info">Calories info</string>
    <string name="macros">Macros</string>
    <string name="log_out">Log out</string>

...
